chapter-05/tutorial5.2.1/green_ingress.yaml
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta 
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: demo.info
    http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: 80
